
syntax = "proto3";
import "google/protobuf/empty.proto";
package secrets;


message GetSecretRequest {
   string Name = 1;
}


message SecretModel {
    string Name = 1;
    string Value = 2;
    int32 Level = 3;
}

message GetTemplatesUsageRequest {
   string Name = 1;
}


message GetTemplatesUsageResponse {
   repeated TemplateUsageModel Templates = 1;
}

message TemplateUsageModel{
   string Env = 1;
   string Name = 2;
   string Yaml = 3;
}


message GetSecretsUsageRequest {
   string Name = 1;
}

message GetSecretsUsageResponse{
   repeated SecretUsageModel Secrets = 1;
}

message SecretUsageModel {
   string Name = 1;
   string Value = 2;
}

message SecretListItem{
   string Name = 1;
   int32 Level = 2;
   string Created = 3;
   string Updated = 4;
   int32 UsedByTemplates = 5;
   int32 UsedBySecrets = 6;
}

message SaveSecretRequest{
   SecretModel model=1;
}

message DeleteSecretRequest{
   string Name = 1;
}
service Secrets {
    rpc Get(GetSecretRequest) returns (SecretModel);
    rpc GetAll(google.protobuf.Empty) returns (stream SecretListItem);
    rpc Save(SaveSecretRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteSecretRequest) returns (google.protobuf.Empty);
    
    rpc GetTemplatesUsage(GetTemplatesUsageRequest) returns (GetTemplatesUsageResponse);
    rpc GetSecretsUsage(GetSecretsUsageRequest) returns (GetSecretsUsageResponse);
    rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
 }